1.add job and cronjob check in webhook 2.fix pod check in webhook

--- a/yamls/webhook.yaml
+++ b/yamls/webhook.yaml
@@ -92,6 +92,15 @@ webhooks:
     - operations:
         - CREATE
       apiGroups:
+        - "batch"
+      apiVersions:
+        - v1
+      resources:
+        - jobs
+        - cronjobs
+    - operations:
+        - CREATE
+      apiGroups:
         - ""
       apiVersions:
         - v1
