--- a/yamls/kube-ovn-dual-stack.yaml
+++ b/yamls/kube-ovn-dual-stack.yaml
@@ -75,10 +75,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-            - name: POD_IPS
+            - name: POD_IP
               valueFrom:
                 fieldRef:
-                  fieldPath: status.podIPs
+                  fieldPath: status.podIP
           volumeMounts:
             - mountPath: /etc/localtime
               name: localtime
@@ -186,10 +186,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-            - name: POD_IPS
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIPs
           volumeMounts:
             - name: host-modules
               mountPath: /lib/modules
@@ -430,10 +426,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-            - name: POD_IPS
+            - name: POD_IP
               valueFrom:
                 fieldRef:
-                  fieldPath: status.podIPs
+                  fieldPath: status.podIP
           resources:
             requests:
               cpu: 200m
