--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -30,6 +30,7 @@ e2e-compile:
 	go test ./test/e2e/kube-ovn -c -o test/e2e/kube-ovn/e2e.test
 	go test ./test/e2e/ovn-ic -c -o test/e2e/ovn-ic/e2e.test
 	go test ./test/e2e/lb-svc -c -o test/e2e/lb-svc/e2e.test
+	go test ./test/e2e/security -c -o test/e2e/security/e2e.test
 
 .PHONY: k8s-conformance-e2e
 k8s-conformance-e2e:
@@ -82,3 +83,11 @@ kube-ovn-lb-svc-conformance-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	./test/e2e/lb-svc/e2e.test --ginkgo.focus=CNI:Kube-OVN
+
+.PHONY: kube-ovn-security-e2e
+kube-ovn-security-e2e:
+	go test ./test/e2e/kube-ovn -c -o test/e2e/kube-ovn/e2e.test
+	E2E_BRANCH=$(E2E_BRANCH) \
+	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
+	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
+	./test/e2e/security/e2e.test --ginkgo.focus=CNI:Kube-OVN
