Revert "remove POD_IPS and use POD_IP instead"
This reverts commit 8a1a3ca81e5faa1ee7c8d846df0ba3cf5957fda2.

--- a/kubeovn-helm/templates/ovncni-ds.yaml
+++ b/kubeovn-helm/templates/ovncni-ds.yaml
@@ -90,6 +90,10 @@ spec:
             value: "{{- .Values.performance.MODULES }}"
           - name: RPMS
             value: "{{- .Values.performance.RPMS }}"
+          - name: POD_IPS
+            valueFrom:
+              fieldRef:
+                fieldPath: status.podIPs
           - name: ENABLE_BIND_LOCAL_IP
             value: "{{- .Values.func.ENABLE_BIND_LOCAL_IP }}"
         volumeMounts:
