--- a/kubeovn-helm/templates/monitor-deploy.yaml
+++ b/kubeovn-helm/templates/monitor-deploy.yaml
@@ -53,10 +53,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-            - name: POD_IP
+            - name: POD_IPS
               valueFrom:
                 fieldRef:
-                  fieldPath: status.podIP
+                  fieldPath: status.podIPs
             - name: ENABLE_BIND_LOCAL_IP
               value: "{{- .Values.func.ENABLE_BIND_LOCAL_IP }}"
           resources:
