--- a/yamls/webhook.yaml
+++ b/yamls/webhook.yaml
@@ -117,6 +117,7 @@ webhooks:
       resources:
         - subnets
         - vpcs
+        - vips
   failurePolicy: Ignore
   admissionReviewVersions: ["v1", "v1beta1"]
   sideEffects: None
