--- a/kubeovn-helm/templates/kube-ovn-crd.yaml
+++ b/kubeovn-helm/templates/kube-ovn-crd.yaml
@@ -1270,6 +1270,8 @@ spec:
                           - reject
                 u2oInterconnection:
                   type: boolean
+                enableLb:
+                  type: boolean
   scope: Cluster
   names:
     plural: subnets
