--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -861,6 +861,8 @@ spec:
                           - reject
                 u2oInterconnection:
                   type: boolean
+                enableLb:
+                  type: boolean
   scope: Cluster
   names:
     plural: subnets
