--- a/yamls/webhook.yaml
+++ b/yamls/webhook.yaml
@@ -118,6 +118,11 @@ webhooks:
         - subnets
         - vpcs
         - vips
+        - vpc-nat-gateways
+        - iptables-eips
+        - iptables-dnat-rules
+        - iptables-snat-rules
+        - iptables-fip-rules
   failurePolicy: Ignore
   admissionReviewVersions: ["v1", "v1beta1"]
   sideEffects: None
