--- a/kubeovn-helm/templates/kube-ovn-crd.yaml
+++ b/kubeovn-helm/templates/kube-ovn-crd.yaml
@@ -1272,6 +1272,8 @@ spec:
                   type: boolean
                 enableLb:
                   type: boolean
+                enableEcmp:
+                  type: boolean
   scope: Cluster
   names:
     plural: subnets
