--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -863,6 +863,8 @@ spec:
                   type: boolean
                 enableLb:
                   type: boolean
+                enableEcmp:
+                  type: boolean
   scope: Cluster
   names:
     plural: subnets
