--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -1066,7 +1066,7 @@ jobs:
     needs:
       - build-centos-compile
       - k8s-conformance-e2e
-      # - k8s-netpol-e2e
+      - k8s-netpol-e2e
       - cyclonus-netpol-e2e
       - kube-ovn-conformance-e2e
       - kube-ovn-ic-conformance-e2e
