--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -101,6 +101,14 @@ kube-ovn-lb-svc-conformance-e2e:
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	./test/e2e/lb-svc/e2e.test --ginkgo.focus=CNI:Kube-OVN
 
+.PHONY: kube-ovn-eip-conformance-e2e
+kube-ovn-eip-conformance-e2e:
+	go test ./test/e2e/ovn-eip -c -o test/e2e/ovn-eip/e2e.test
+	E2E_BRANCH=$(E2E_BRANCH) \
+	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
+	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
+	./test/e2e/ovn-eip/e2e.test --ginkgo.focus=CNI:Kube-OVN
+
 .PHONY: kube-ovn-security-e2e
 kube-ovn-security-e2e:
 	go test ./test/e2e/security -c -o test/e2e/security/e2e.test
