--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -3,9 +3,18 @@ E2E_IP_FAMILY := $(shell echo $${E2E_IP_FAMILY:-ipv4})
 E2E_NETWORK_MODE := $(shell echo $${E2E_NETWORK_MODE:-overlay})
 
 K8S_CONFORMANCE_E2E_FOCUS = "sig-network.*Conformance" "sig-network.*Feature:NoSNAT"
-K8S_CONFORMANCE_E2E_SKIP = "sig-network.*Services.*session affinity"
+K8S_CONFORMANCE_E2E_SKIP =
 K8S_NETPOL_E2E_FOCUS = "sig-network.*Feature:NetworkPolicy"
 K8S_NETPOL_E2E_SKIP = "sig-network.*NetworkPolicyLegacy"
+
+ifeq ($(shell echo $(E2E_BRANCH) | grep -o ^release-),release-)
+VERSION_NUM = $(subst release-,,$(E2E_BRANCH))
+VER_MAJOR = $(shell echo $(VERSION_NUM) | cut -f1 -d.)
+VER_MINOR = $(shell echo $(VERSION_NUM) | cut -f2 -d.)
+ifeq ($(shell test $(VER_MAJOR) -lt 1 -o \( $(VER_MAJOR) -eq 1 -a $(VER_MINOR) -lt 12 \) && echo true),true)
+K8S_CONFORMANCE_E2E_SKIP += "sig-network.*Services.*session affinity"
+endif
+endif
 
 ifeq ($(shell test $(E2E_IP_FAMILY) != ipv6 && echo true),true)
 K8S_CONFORMANCE_E2E_FOCUS += \
