--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -179,7 +179,7 @@ jobs:
         run: make k8s-netpol-e2e
 
   k8s-netpol-legacy-e2e:
-    name: Kubernetes Network Policy E2E
+    name: Kubernetes Network Policy Legacy E2E
     runs-on: ubuntu-22.04
     timeout-minutes: 60
     strategy:
