--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -449,7 +449,7 @@ jobs:
 
       - name: Run E2E
         working-directory: ${{ env.E2E_DIR }}
-        run: make k8s-netpol-e2e-legacy
+        run: make k8s-netpol-legacy-e2e
 
   cyclonus-netpol-e2e:
     name: Cyclonus Network Policy E2E
@@ -1153,7 +1153,7 @@ jobs:
       - build-centos-compile
       - k8s-conformance-e2e
       - k8s-netpol-e2e
-      - k8s-netpol-e2e-legacy
+      - k8s-netpol-legacy-e2e
       - cyclonus-netpol-e2e
       - kube-ovn-conformance-e2e
       - kube-ovn-ic-conformance-e2e
