--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -6,6 +6,7 @@ K8S_CONFORMANCE_E2E_FOCUS = "sig-network.*Conformance" "sig-network.*Feature:NoS
 K8S_CONFORMANCE_E2E_SKIP =
 K8S_NETPOL_E2E_FOCUS = "sig-network.*Feature:NetworkPolicy"
 K8S_NETPOL_E2E_SKIP = "sig-network.*NetworkPolicyLegacy"
+K8S_NETPOL_LEGACY_E2E_FOCUS = "sig-network.*NetworkPolicyLegacy"
 
 ifeq ($(shell echo $(E2E_BRANCH) | grep -o ^release-),release-)
 VERSION_NUM = $(subst release-,,$(E2E_BRANCH))
@@ -47,6 +48,12 @@ k8s-conformance-e2e:
 	./test/e2e/k8s-network/e2e.test --ginkgo.timeout=1h \
 		$(call ginkgo_option,focus,$(K8S_CONFORMANCE_E2E_FOCUS)) \
 		$(call ginkgo_option,skip,$(K8S_CONFORMANCE_E2E_SKIP))
+
+.PHONY: k8s-netpol-legacy-e2e
+k8s-netpol-legacy-e2e:
+	go test ./test/e2e/k8s-network -c -o test/e2e/k8s-network/e2e.test
+	./test/e2e/k8s-network/e2e.test --ginkgo.timeout=2h \
+		$(call ginkgo_option,focus,$(K8S_NETPOL_LEGACY_E2E_FOCUS))
 
 .PHONY: k8s-netpol-e2e
 k8s-netpol-e2e:
