--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -17,13 +17,14 @@ K8S_CONFORMANCE_E2E_SKIP += "sig-network.*Services.*session affinity"
 endif
 endif
 
-ifeq ($(shell test $(E2E_IP_FAMILY) != ipv6 && echo true),true)
-K8S_CONFORMANCE_E2E_FOCUS += \
-	"sig-network.*Feature:Networking-IPv4" \
-	"sig-network.*Feature:Feature:Networking-DNS"
+ifneq ($(E2E_IP_FAMILY),ipv6)
+K8S_CONFORMANCE_E2E_FOCUS += "sig-network.*Feature:Networking-IPv4"
+ifeq ($(E2E_NETWORK_MODE),overlay)
+K8S_CONFORMANCE_E2E_FOCUS += "sig-network.*Feature:Networking-DNS"
+endif
 endif
 
-ifeq ($(shell test $(E2E_IP_FAMILY) = dual && echo true),true)
+ifeq ($(E2E_IP_FAMILY),dual)
 K8S_CONFORMANCE_E2E_FOCUS += "sig-network.*Feature:IPv6DualStack"
 endif
 
