--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -103,7 +103,7 @@ kube-ovn-lb-svc-conformance-e2e:
 
 .PHONY: kube-ovn-security-e2e
 kube-ovn-security-e2e:
-	go test ./test/e2e/kube-ovn -c -o test/e2e/kube-ovn/e2e.test
+	go test ./test/e2e/security -c -o test/e2e/security/e2e.test
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
