--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1134,6 +1134,10 @@ spec:
                   type: string
                 udpSessionLoadBalancer:
                   type: string
+                sctpLoadBalancer:
+                  type: string
+                sctpSessionLoadBalancer:
+                  type: string
               type: object
           type: object
       served: true
