add e2e cases for sctp connectivity

--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -14,7 +14,11 @@ VER_MAJOR = $(shell echo $(VERSION_NUM) | cut -f1 -d.)
 VER_MINOR = $(shell echo $(VERSION_NUM) | cut -f2 -d.)
 ifeq ($(shell test $(VER_MAJOR) -lt 1 -o \( $(VER_MAJOR) -eq 1 -a $(VER_MINOR) -lt 12 \) && echo true),true)
 K8S_CONFORMANCE_E2E_SKIP += "sig-network.*Services.*session affinity"
+else
+K8S_CONFORMANCE_E2E_FOCUS += "sig-network.*Networking.*Feature:SCTPConnectivity"
 endif
+else
+K8S_CONFORMANCE_E2E_FOCUS += "sig-network.*Networking.*Feature:SCTPConnectivity"
 endif
 
 ifneq ($(E2E_IP_FAMILY),ipv6)
