OVN LB: add support for SCTP protocol (#2331)
* OVN LB: add support for SCTP protocol

* add e2e cases for sctp connectivity

* fix lb vips cleanup

--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1124,6 +1124,10 @@ spec:
                   type: string
                 udpSessionLoadBalancer:
                   type: string
+                sctpLoadBalancer:
+                  type: string
+                sctpSessionLoadBalancer:
+                  type: string
               type: object
           type: object
       served: true
